@@ -1,3 +1,8 @@
+Wed Oct 14 18:16:38 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/contrib/mcpp/system.cpp:
+          Fixed argument not used warning
+
 Wed Oct 14 17:42:38 UTC 2009  Vladimir Zykov  <vz@prismtech.com>
 
         * tao/Acceptor_Impl.cpp:
